# agentic-harness

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/adr/: 0001-three-blast-radius-tiers.md  0002-sha256-hash-chain.md
examples/procurement_triage/: agent.py
harness/: __init__.py  audit.py  blast_radius.py  budget.py
tests/: test_audit.py  test_blast_radius.py  test_budget.py  test_procurement_triage.py
