[project]
name = "agentic-harness"
version = "0.1.0"
description = "Production-shape agent harness with autonomy budgets, blast-radius controls, and regulator-legible audit trails."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Venkat Ramachandran" }]
keywords = ["agentic-ai", "ai-governance", "ai-safety", "eu-ai-act", "iso-42001"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
]
langgraph = [
  "langgraph>=0.2",
]

[project.urls]
Homepage = "https://github.com/mindfulcto-labs/agentic-harness"
Documentation = "https://github.com/mindfulcto-labs/agentic-harness#readme"
Blog = "https://themindfulcto.com"
Issues = "https://github.com/mindfulcto-labs/agentic-harness/issues"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "adapters", "examples"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
